fix: Fix floating footer problem on Safari
The grid element that enclosed the whole page was causing problems on
Safari and IE11. Removing it solved the problem.
- Safari: the footer floated in the middle of the page on big screens
- IE11: the whole main element didn't take enough space and overlapped
    with the header and footer.

--- a/src/client/styles/layout/layout.scss
+++ b/src/client/styles/layout/layout.scss
@@ -1,24 +1,3 @@
-.grid {
-    display: grid;
-    min-height: 100%;
-    grid-template:
-        'header' auto
-        'main' 1fr
-        'footer' auto / 100%;
-}
-
-.header {
-    grid-area: header;
-}
-
-main {
-    grid-area: main;
-}
-
-.footer {
-    grid-area: footer;
-}
-
 .tripSelection,
 .newTrip {
     min-width: 20rem;
